# XCalib

./: .gitignore  .gitmodules  LICENSE  Mytypes.py  README.md  Run.py  download_examples.sh  download_weights.sh  environment.yml  pyproject.toml  test.py
XCalib/: xcalib.py
XCalib/backbone/: __init__.py  backbone.py  backbone_depth_anything.py  backbone_depth_anythingV2.py  backbone_depth_pro.py
XCalib/config/: XCalib.py  common.py
XCalib/dataset/: CATS.py  CVC_14.py  FLIR.py  InfraParis.py  KAIST_V000.py  LLVIP.py  LLVIPClean.py  Lynred_night.py  Lynred_sequence_day.py  MS2.py  MSRS.py  MyDataset.py  RoadScene.py  __init__.py  data_module.py  dataset_cameras.py  types.py
XCalib/export/: cameras.py  trajectory.py
XCalib/frame_sampler/: frame_sampler_random.py  frame_sampler_sequence.py
XCalib/loss/: __init__.py  loss_flow.py  loss_pose.py
XCalib/misc/: common_training_setup.py
XCalib/model/: model.py  model_wrapper.py  projection.py
XCalib/precomputation/: precomputation.py
backbone/: __init__.py  backbone.py  backbone_depth_anything.py  backbone_depth_pro.py
config/: XCalib.yaml  posenet.yaml
config/dataset/: FLIR.yaml  (+8 more)
depth_refiner/: refiner.py
enhancer/: __init__.py  swinir_arch.py
frame_sampler/: __init__.py  frame_sampler.py
loss/: __init__.py  loss.py  loss_flow.py  loss_image.py  loss_pose.py
misc/: Mytypes.py  utils.py
model/: XCalib.py  cameras.py  depthRefiner.py  inverse_flow.py  softsplat.py  spatial_transformer.py  validation.py
options/: __init__.py  mainConf.yaml  options.py
posenet/: PoseNet.py
utils/: misc.py
(+191 files in other folders)
